# envfig

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
envfig/: Cargo.toml
envfig-derive/: Cargo.toml
envfig-derive/src/: error.rs  lib.rs
envfig/src/: doc.rs  lib.rs
envfig/src/validator/: min_max.rs  mod.rs
envfig/tests/: basic.proptest-regressions  basic.rs  derive.rs
src/: doc.rs  lib.rs
src/validator/: min_max.rs  mod.rs
tests/: basic.rs
