[package]
name = "envfig-derive"
description = ""
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "2.0.12"

